<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Saldo Oi</string>

    <string-array name="origem_prefixos_conhecidos">
        <item>+55031000</item>
    </string-array>
    <string-array name="renova_dados_valores_descricao">
        <item>5MB (1 dia)</item>
        <item>20MB (1 semana)</item>
        <item>50MB (1 mes)</item>
    </string-array>
    <string-array name="renova_dados_destinatarios">
        <item>3505</item>
        <item>3520</item>
        <item>3550</item>
    </string-array>
    <string-array name="renova_dados_texto_mensagem">
        <item>Oi</item>
        <item>Oi</item>
        <item>Oi</item>
    </string-array>

    <array name="renova_dados_validade_dias">
        <item>1</item>
        <item>7</item>
        <item>30</item>
    </array>

    <string name="preferencias_titulo_renova_dados_info">Informações</string>
    <string name="preferencias_titulo_renova_dados_config">Configurações</string>
    <string name="preferencias_titulo_dados_validade">Validade</string>
    <string name="preferencias_descricao_dados_validade">Desconhecida</string>
    <string name="preferencias_titulo_dados_proximo">Próxima renovação</string>
    <string name="preferencias_descricao_dados_proximo">Não programada</string>
    <string name="preferencias_titulo_renova_dados_agora">Renovar agora!</string>

    <string name="preferencias_titulo_renova_dados_habilitado">Renovar ao vencer</string>
    <string name="preferencias_titulo_renova_dados_valor">Plano de dados</string>
    <string name="preferencias_descricao_renova_dados_valor">Selecione</string>

    <string-array name="preferencias_renova_dados_valores">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="mensagem_confirmacao_renova_dados_agora">Renovar plano de dados imediatamente?</string>
    <string name="mensagem_erro_renova_dados_vencido">Não posso fazer isso! Seu bônus de internet já está vencido, renove-o manualmente antes de tentar novamente.</string>
    <string name="mensagem_erro_renova_dados_sem_info">Ooops, não sei a validade de seu bônus de internet. Se desejar, renove seu saldo manualmente.</string>
    <string name="descricao_renova_dados_bloqueado">Disponível em %s</string>

    <string name="rotulo_entendi">Entendi!</string>

    <string name="view_principal_descricao">Esta aplicação pode ser utilizada
        para acompanhar o Saldo de Internet da sua linha Oi. Vá em frente e
        toque na opção abaixo para começar:</string>

    <string name="view_plano_dados">Plano de dados</string>
    <string name="view_plano_dados_titulo">Saldo Oi - Plano de dados</string>

    <string name="view_sobre">Sobre</string>
    <string name="view_sobre_titulo">Saldo Oi - Sobre</string>

    <string name="view_sobre_versao_titulo">Versão</string>

    <string name="view_sobre_projeto_titulo">Projeto de código livre</string>
    <string name="view_sobre_projeto_url">https://github.com/ThiagoVinicius/Saldo-Oi</string>

    <string name="view_sobre_licencas">Licenças</string>
    <string name="view_sobre_licencas_titulo">Saldo Oi - Licenças</string>

    <string name="view_sobre_autores">Autores</string>
    <string name="view_sobre_autores_titulo">Saldo Oi - Autores</string>
    <string name="view_sobre_autores_texto">
        <![CDATA[
        <p>
        <h3>Desenvolvimento</strong></h3>
        Thiago Vinícius Freire de Araújo Ribeiro<br/>
        <u>android@thiagovinicius.com</u>
        </p>
        <p>
        <h3>Ícones</h3>
        Jailton Maciel<br/>
        <u>jailton.mas@gmail.com</u>
        </p>
        ]]>
    </string>

    <string name="view_boas_vindas_descricao">
        <![CDATA[
        <p>
        Leia com atenção.
        </p>
        <p>
        Esta aplicação pode consumir créditos e gerar gastos indesejados, se
        utilizada de forma indevida. O AUTOR NÃO SE RESPONSABILIZA, SOB NENHUMA
        CIRCUNSTÂNCIA, POR GASTOS DECORRENTES DA UTILIZAÇÃO DESTA APLICAÇÂO.
        </p>
        <p>
        O autor desta aplicação não é afiliado à operadora Oi ou seus parceiros.
        ESTA NÃO É UMA APLICAÇÃO OFICIAL DA OI.
        </p>
        <p>
        O AUTOR NÃO SE RESPOSABILIZA POR EVENTUAIS DEFEITOS CONTIDOS NESTA
        APLICAÇÃO, NEM POR QUALQUER PREJUÍZO CAUSADO POR TAIS DEFEITOS.
        </p>
        ]]>
    </string>
    <string name="view_boas_vindas_aceito">Entendi e aceito</string>
    <string name="view_boas_vindas_aceito_desabilitado">Entendi e aceito (aguarde)</string>
    <string name="view_boas_vindas_rejeito">Não aceito</string>

</resources>