<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/view_plano_dados_titulo">

    <PreferenceCategory android:title="@string/preferencias_titulo_renova_dados_info" >
        <Preference
            android:key="renova_dados_validade"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/preferencias_descricao_dados_validade"
            android:title="@string/preferencias_titulo_dados_validade" />
        <Preference
            android:key="renova_dados_agendado"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/preferencias_descricao_dados_proximo"
            android:title="@string/preferencias_titulo_dados_proximo" />
	</PreferenceCategory>

    <PreferenceCategory android:title="@string/preferencias_titulo_renova_dados_config" >
        <ListPreference
            android:dialogTitle="@string/preferencias_titulo_renova_dados_valor"
            android:entries="@array/renova_dados_valores_descricao"
            android:entryValues="@array/preferencias_renova_dados_valores"
            android:key="renova_dados_tipo"
            android:title="@string/preferencias_titulo_renova_dados_valor" />

        <CheckBoxPreference
            android:key="renova_dados_habilitado"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferencias_titulo_renova_dados_habilitado" 
            android:dependency="renova_dados_tipo"/>
        <!-- Nesse caso, declarar a dependência aqui não adianta. Logo, esta
             dependência está implementada em Java, no código da aplicação. -->

        <Preference
            android:key="renova_dados_agora"
            android:persistent="false"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferencias_titulo_renova_dados_agora" />

    </PreferenceCategory>

</PreferenceScreen>