<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/view_sobre_titulo">

    <Preference
        android:key="versao"
        android:persistent="false"
        android:title="@string/view_sobre_versao_titulo"
        android:summary="@string/info_scm"/>

    <PreferenceScreen
        android:title="@string/view_sobre_projeto_titulo">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/view_sobre_projeto_url"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/view_sobre_licencas">
        <intent
            android:targetPackage="com.thiagovinicius.android.saldooi"
            android:targetClass="com.thiagovinicius.android.saldooi.views.Sobre$Licencas"/>
    </PreferenceScreen>

</PreferenceScreen>